--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   path_provider: ^2.1.3
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
