--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   http: ^1.2.1
+  image_picker: ^1.1.2
   path_provider: ^2.1.3
   shared_preferences: ^2.2.3
 
