--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   image_picker: ^1.1.2
+  path: ^1.9.0
   path_provider: ^2.1.3
   shared_preferences: ^2.2.3
 
