--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,12 @@ environment:
 dependencies:
   camera: ^0.11.0+1
   dio: ^5.4.3+1
+  firebase_core: ^3.1.1
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  google_ml_kit: ^0.18.0
   http: ^1.2.1
   image_picker: ^1.1.2
   path: ^1.9.0
